--- a/modelicaml/org.openmodelica.modelicaml.view.valuebindings/plugin.xml
+++ b/modelicaml/org.openmodelica.modelicaml.view.valuebindings/plugin.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.4"?>
 <plugin>
+   <!-- NOTE: all marker types are defined in the mml.common plugin 
 	<extension
        id="org.openmodelica.modelicaml.marker.bindings"
        name="ModelicaML Value Bindings"
        point="org.eclipse.core.resources.markers">
+      <super
+            type="org.eclipse.emf.validation.problem">
+      </super>
       <super
             type="org.eclipse.emf.ecore.diagnostic">
       </super>
@@ -14,10 +18,8 @@
       <persistent
             value="true">
       </persistent>
-      <attribute
-            name="generatedBy">
-      </attribute>
    </extension>
+   -->
    <extension
          point="org.eclipse.ui.views">
       <category
